Review all maven, gradle, github actions warnings and labels